<resources>
    <string name="app_name">AP Homework</string>
    <string name="btn_main_lesson1">Lesson1</string>
    <string name="btn_main_lesson2">Lesson2</string>
    <string name="btn_main_lesson3">Lesson3</string>
    <string name="btn_main_lesson4">Lesson4</string>
    <string name="btn_main_lesson5">Lesson5</string>
    <string name="btn_main_lesson6">Lesson6</string>
    <string name="btn_main_lesson7">Lesson7</string>
    <string name="tv_l3_1_anr">L3.1 : Click Button To Create ANR</string>
    <string name="btn_l3_1_anr">Cause ANR</string>
    <string name="tv_l3_2_library">L3.2 : Map Support Library</string>
    <string name="btn_l3_2_library">Support Library</string>
    <string name="btn_l4_1_input">L4.1 : User Input Controls</string>
    <string name="btn_l4_2_menus">L4.2 : Menus</string>
    <string name="btn_l4_3_navigation">L4.3 : Screen Navigation</string>
    <string name="btn_l4_4_recycler">L4.4 : RecyclerView</string>
    <string name="cb_l4_1_chocolate">Chocolate syrup</string>
    <string name="cb_l4_2_sprinkles">Sprinkles</string>
    <string name="cb_l4_3_crashed">Crushed nuts</string>
    <string name="cb_l4_4_cherries">Cherries</string>
    <string name="cb_l4_5_orio">Orio cookie crumbles</string>
    <string name="btn_l4_1_showtoast">SHOW TOAST</string>
    <string name="l4_2_article_title">Beatles Anthology Vol. 1</string>
    <string name="l4_2_article_subtitle">Behind That Locked Door: Beatles Rarities!</string>
    <string name="l4_2_article_text">In a vault deep inside Abbey Road Studios in London — protected by an unmarked, triple-locked, police-alarmed door — are something like 400 hours of unreleased Beatles recordings, starting from June 2, 1962 and ending with the very last tracks recorded for the <i>Let It Be</i> album. The best of the best were released by Apple Records in the form of the 3-volume Anthology series.
                                    For more information, see the Beatles Time Capsule at www.rockument.com.
                                    \n\n
                                    This volume starts with the first new Beatle song, “Free as a Bird” (based on a John Lennon demo, found only on the bootleg <i>The Lost Lennon Tapes Vol. 28</i>, and covers the very earliest historical recordings, outtakes from the first albums, and live recordings from early concerts and BBC Radio sessions.
                                    \n\n
                                    <b>Highlights include:</b>
                                    \n\n
                                    <b><i>Cry for a Shadow</i></b> - Many a Beatle fanatic started down the bootleg road, like I did, with a first listen to this song. Originally titled “Beatle Bop” and recorded in a single session that yielded four songs (the other three featured Tony Sheridan with the Beatles as a backing band), “Cry for a Shadow” is an instrumental written by Lennon and Harrison, which makes it unique to this day. John Lennon plays rhythm guitar, George Harrison plays lead guitar, Paul McCartney plays bass, and Pete Best plays drums. The sessions were produced by Bert Kaempfert in Hamburg, Germany, during the Beatles’ second visit from April through July of 1961 to play in the Reeperbahn-section clubs.
                                    \n\n
                                    <b><i>My Bonnie</i></b> and <b><i>Ain’t She Sweet</i></b> — At the same session, the Beatles played on “My Bonnie” (the first-ever single with Beatles playing), as the backing band for English singer Tony Sheridan, originally a member of the Jets. The popularity of this single in Liverpool brought the Beatles to the attention of Brian Epstein, who worked in the NEMS record store and tried to meet demand for the disc. John Lennon then sings a fine “Ain’t She Sweet” (his first-ever released vocal).
                                    \n\n
                                    <b><i>Searchin</i></b> — A Jerry Leiber - Mike Stoller comedy song that was a hit for the Coasters in 1957, and a popular live favorite of the Beatles. The Coasters also had a hit with “Besame Mucho” and the Beatles covered that song as well. Ringo Starr had by now replaced Pete Best on drums. The high falsetto is George, who also plays a hesitant lead guitar. This is from their first audition for Decca Records in London on Jan 1., 1962, live in the studio. The Grateful Dead would later cover “Searchin” with a similar arrangement, Pigpen doing the Paul vocals. A live version is available on bootlegs featuring the Dead joined by the Beach Boys!
                                    \n\n
                                    <b><i>Love Me Do</i></b> — An early version of the song, played a bit slower and with more of a blues feeling, and a cool bossa-nova beat in middle. Paul had to sing while John played harmonica — a first for the group. Pete Best played drums on this version.
                                    \n\n
                                    <b><i>She Loves You – Till There Was You – Twist and Shout</i></b> — Live at the Princess Wales Theatre by Leicester Square in London, attended by the Queen. “Till There Was You” (by Meredith Wilson) is from the musical The Music Man and a hit for Peggy Lee in 1961. Before playing it, Paul said it was recorded by his favorite American group, “Sophie Tucker” (which got some laughs). At the end, John tells the people in the cheaper seats to clap their hands, and the rest to “rattle your jewelry” and then announces “Twist and Shout” (a song by Bert Russell and Phil Medley that was first recorded in 1962 by the Isley Brothers). A film of the performance shows the Queen smiling at John’s remark.
                                    \n\n
                                    <b><i>Leave My Kitten Alone</i></b> — One of the lost Beatle songs recorded during the “Beatles For Sale” sessions but never released. This song, written by Little Willie John, Titus Turner, and James McDougal, was a 1959 R&amp;B hit for Little Willie John and covered by Johnny Preston before the Beatles tried it and shelved it. A reference to a “big fat bulldog” may have influenced John’s “Hey Bulldog” (Yellow Submarine album), which is a similar rocker.
                                    \n\n
                                    <b><i>One After 909</i></b> — A song recorded for the <i>Let It Be</i> album was actually worked on way back in the beginning, six years earlier. This take shows how they did it much more slowly, with an R&amp;B feel to it.
                                    </string>
    <string name="menu_l4_2_edit">Edit</string>
    <string name="menu_l4_2_share">Share</string>
    <string name="menu_l4_2_delete">Delete</string>
    <string name="l4_3_3_nav_btn1">Lesson4.3 Ancestral navigation 1</string>
    <string name="l4_3_3_nav_btn2">Lesson4.3 Ancestral navigation 2</string>
    <string name="l4_3_3_nav_btn3">Lesson4.3 Ancestral navigation 3</string>
    <string name="title_activity_display_message">RecylerView</string>
    <string name="news_one_title">Dallas police HQ attack: Suspect believed killed during standoff</string>
    <string name="news_one_desc">and ows the dark van ramming the nose of a police car before retreating in reverse</string>
    <string name="news_two_title">Hugh Jackman says coffee can change the world</string>
    <string name="news_two_desc">(CNN)-Hugh Jackman may be finished playing Wolverine in Marvels X-Men films,but the actior still uses his superhuman powers to impact global poverty，Humanitarianism is deeply ingrained in Jackman upbringing. His father, Christopher Jackman, instilled the value of giving through his work as a volunteer accountant for charities serving the developing world.
                                    I suppose he was leading by example, Jackman said. Areas of poverty and extreme poverty, I learned, are not a natural state. It is man-made and solvable.</string>
    <string name="news_three_title">Australia in charge of second Test against West Indies in Jamaica</string>
    <string name="news_three_desc">Australia in charge of second Test against West Indies in Jamaica。
                                    (CNN)US Olympic figure skater Adam Rippon turned down a meeting with Vice President Mike Pence after criticizing him for his stance on gay rights, USA Today reported Wednesday.
                                    After reading a January 17 interview in which Rippon criticized Pence, the vice president\'s staff asked the US Olympic Committee to set up a conversation that same day between the athlete and the politician, which Rippon ultimately declined, USA Today's Christine Brennan reported, citing two sources with knowledge of the situation. Brennan is also a CNN sports analyst.
                                    In a post on his official Twitter account Thursday, Pence told Rippon the US delegation was "for you," and warned him not to let the "fake news" distract him.
                                    Sponsor Content Laura battled HPV-related cervical cancer three times. Here’s her story Laura Fletcher, a three-time survivor of recurrent HPV-linked cervical cancer, shares her
                                    story to raise awareness of HPV and related cancers.
                                    Content provided by MSD
                                    "I am proud of you and ALL OF OUR GREAT athletes and my only hope for you and all of #TeamUSA is to bring home the gold. Go get 'em!" he told the athlete.</string>
    <string name="news_four_title">武陵農場櫻花季賞花 交管措施報您知</string>
    <string name="news_four_desc">武陵農場針對場內櫻花開放時程評估，訂定武陵農場櫻花季疏運時程將自2月16日大年初一正式登場，並持續至2月25日，共計10天，並包含春節連續假期2月16日至20日；為讓上山賞櫻花民眾能有安全舒適的行車環境，並悠遊高品質的賞櫻空間，將比照往年規劃「場內總量管制、道路交通管制、團客預約入場、公共運輸接駁」等四大交通疏運措施。
                                    櫻花季期間武陵農場實施總量管制每天進場人數6,000人，包括住宿遊客1,800人及一日遊遊客4,200人，其中一日遊遊客又分為團體票1,000人及搭乘公共運輸散客3,200人；住宿遊客憑武陵農場製發的車輛通行證始得進場，團體遊客透過宜蘭縣政府預約平台，依登記時段換發通行證進場，搭乘公共運輸散客則於國光客運及豐原客運提供的售票管道購買車票進場。
                                    和平警分局指出，櫻花季期間武陵農場周邊道路將實施交通管制，台7線95k牛鬥橋及台7甲線74k梨山將於沿線路段及宣導點設置大型牌面，宣導無通行證者請勿進入武陵農場，已預約之大客車應至指定地點換證等相關訊息；另也將在台7甲線與中124線(武陵路)入口處設置檢驗點，由武陵農場實施全天候交通管制。
                                    和平警分局將協助管制，無通行證的車輛一律禁止進入，台7甲線45k~55k（思源啞口~中124線路口）路邊於櫻花季期間禁止臨時停車，將於該路段繪設紅線及設置禁止臨時停車標誌；和平警分局將於花季期間規劃警力，嚴加取締違規停車及加強沿線交通疏導，期能有效疏導車流，提升民眾賞櫻及旅遊品質。</string>
    <string name="news_five_title">春遊苗栗金牌農村 南庄蓬萊社區體驗多元文化的山居風情</string>
    <string name="tv_l5_2_title">"Enter URL:"</string>
    <string name="et_l5_2_input_url">"http://www.example.com"</string>
    <string name="btn_l5_2_get_resource">"GET PAGE RESOURCE"</string>
    <string name="tv_l5_2_scroll_title">"Page source will appear here"</string>
    <string name="tv_l7_1_first_channel_title">First Notification Channel</string>
    <string name="tv_l7_1_second_channel_title">Second Notification Channel</string>
    <string name="str_l7_1_first_channel_send_btn_1">Send First Channel Notifications 1</string>
    <string name="str_l7_1_first_channel_send_btn_2">Send First Channel Notifications 2</string>
    <string name="str_l7_1_second_channel_send_btn_1"> Send Second Channel Notifications 1</string>
    <string name="str_l7_1_second_channel_send_btn_2">Send Second Channel Notifications 2</string>
    <string name="str_l7_1_go_to_settings_btn">Go To Settings</string>
</resources>