<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_lesson7_1_lite"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aphomework.Lesson7_1_Main_Activity_Lite">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="5"
        android:id="@+id/gridLayout">

        <TextView
            android:id="@+id/tv_l7_1_first_channel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/tv_l7_1_first_channel_title" />

        <Button
            android:id="@+id/bt_l7_1_send_first_1"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/str_l7_1_first_channel_send_btn_1"/>

        <Button
            android:id="@+id/bt_l7_1_send_first_2"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/str_l7_1_first_channel_send_btn_2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/tv_l7_1_second_channel_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_columnSpan="2"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/tv_l7_1_second_channel_title" />

        <Button
            android:id="@+id/bt_l7_1_send_second_1"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/str_l7_1_second_channel_send_btn_1" />

        <Button
            android:id="@+id/bt_l7_1_send_second_2"
            android:layout_height="wrap_content"
            android:layout_width="200dp"
            android:text="@string/str_l7_1_second_channel_send_btn_2" />

    </GridLayout>

    <Button
        android:id="@+id/bt_l7_1_go_to_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/str_l7_1_go_to_settings_btn" />


</RelativeLayout>
