<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:id="@+id/tv_l3_1_anr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/tv_l3_1_anr" />

    <Button
        android:id="@+id/btn_l3_1_anr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_l3_1_anr"
        android:layout_alignBottom="@id/btn_l3_1_anr"
        android:layout_marginTop="10dp"
        android:text="@string/btn_l3_1_anr" />

    <TextView
        android:id="@+id/tv_l3_2_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_l3_1_anr"
        android:layout_marginTop="70dp"
        android:text="@string/tv_l3_2_library" />

    <Button
        android:id="@+id/btn_l3_2_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_l3_2_library"
        android:layout_below="@id/btn_l3_1_anr"
        android:layout_alignBottom="@id/btn_l3_2_library"
        android:layout_marginTop="50dp"
        android:text="@string/btn_l3_2_library" />

</RelativeLayout>