<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <TextView
        android:id = "@+id/tv_l5_2_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_l5_2_title"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/et_l5_2_input_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/et_l5_2_input_url"
        android:singleLine="true"
        android:onClick="getTips" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listInputText" />

    <Button
        android:id="@+id/btn_l5_2_get_resource"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_l5_2_get_resource"
        android:onClick="getHTMLResource"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_l5_2_html_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text= "@string/tv_l5_2_scroll_title"/>

    </ScrollView>

</LinearLayout>